--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,7 @@ $blue_4: #5A98D0;
 $blue_5: #98C3E8;
 $white: white;
 
-// Общие элементы
+// Общее
 
 @mixin btn($width, $height) {
   width: $width;
@@ -36,6 +36,14 @@ $white: white;
   position: relative;
   display: flex;
   flex-direction: column;
+}
+
+.hide {
+  display: none !important;
+}
+
+.error {
+  color: red !important;
 }
 
 // header
@@ -467,6 +475,130 @@ $white: white;
   }
 }
 
+// let's talk popup
+
+.lets-talk-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 2;
+
+  .overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(1, 1, 1, 0.5);
+  }
+
+  .popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 540px;
+    min-height: 800px;
+    background: $white;
+    box-shadow: 5px 10px 50px rgba(16, 112, 177, 0.2);
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: column;
+
+    &__container {
+      width: 428px;
+      margin: 0 auto;
+    }
+
+    &__title {
+      font-family: Gilroy, sans-serif;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      color: $blue_1;
+
+      margin: 56px 0 48px 0;
+    }
+
+    .group {
+      display: flex;
+      flex-wrap: wrap;
+      margin-bottom: 32px;
+    }
+
+    &__label {
+      font-family: Gilroy, sans-serif;
+      font-size: 16px;
+      line-height: 1.87;
+      letter-spacing: 0.04em;
+      color: #1F3F68;
+      opacity: 0.8;
+      margin-right: 20px;
+    }
+
+    &__input, &__textarea {
+      border: 1px solid rgba(53, 110, 73, 0.4);
+      box-sizing: border-box;
+      border-radius: 10px;
+      padding: 21px 36px;
+      margin-top: 8px;
+
+      font-family: Gilroy, sans-serif;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 1.87;
+      letter-spacing: 0.04em;
+      //color: rgba(31, 63, 104, 0.2);
+    }
+
+    &__input {
+      height: 72px;
+      width: 100%;
+    }
+
+    &__textarea {
+      height: 144px;
+      width: 100%;
+    }
+
+    &__btn {
+      @include btn(100%, 72px);
+      margin-top: 40px;
+    }
+  }
+}
+
+// message popup
+
+.message-popup {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  z-index: 2;
+
+  width: 250px;
+  height: 100px;
+  background: $white;
+  box-shadow: 5px 10px 50px rgba(16, 112, 177, 0.2);
+  border: 1px solid gray;
+  border-radius: 10px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-family: Gilroy, sans-serif;
+  font-size: 18px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: $blue_2;
+
+  transition: opacity 0.5s;
+  opacity: 0;
+}
+
 // media
 
 @media (max-width: 1366px) {
@@ -651,6 +783,17 @@ $white: white;
 
     &__follow-us {
       margin: 0;
+    }
+  }
+
+  .lets-talk-popup {
+
+    .popup {
+      width: 360px;
+
+      &__container {
+        width: 320px;
+      }
     }
   }
 }
